<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="changeTheme">Изменить режим</string>

    <string name="new_page">Создать контакт</string>
    <string name="save">Сохранить</string>
    <string name="first">Имя</string>
    <string name="last">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="mail">E-mail</string>
    <string name="address">Адрес</string>
    <string name="cancel">Отмена</string>

    <string name="nameError">Заполните имя.</string>
    <string name="phoneError">Телефонный номер должен состоять из 11 цифр.</string>
    <string name="mailError">Заполните e-mail.</string>
    <string name="postalError">Заполните адрес.</string>
    <string name="surnameError">Заполните фамилию.</string>
    <string name="take_new_photo">Сделать фотографию.</string>
    <string name="select_new_photo">Выбрать фотографию из галереи.</string>

    <string name="editContact">Изменить контакт.</string>
    <string name="delete">Удалить</string>

    <string name="smsSend">Отправить сообщение.</string>

    <string name="color_green">зеленый</string>
    <string name="color_blue">голубой</string>
    <string name="color_brown">коричневый</string>
    <string name="color_yellow">желтый</string>
    <string name="color_grey">серый</string>

</resources>