<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactNewActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolcustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppThemeActionBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/new_page"
        app:titleMarginStart="20dp"
        app:titleTextColor="?attr/colorOnPrimary" />

    <RelativeLayout
        android:layout_below="@id/toolcustom"
        android:id="@+id/photo_layout"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/monsoon">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="Photo"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_person_white"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:background="@drawable/scrim_topdown"
            android:fitsSystemWindows="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/scrim" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="CameraIcon"
            app:srcCompat="@drawable/ic_camera_alt_white"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo_layout"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/TeFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first"
            android:inputType="textPersonName"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:textColorHighlight="@color/dark"
            android:textColorLink="@color/dark"
            android:textCursorDrawable="@color/dark"
            android:backgroundTint="#696969" />

        <EditText
            android:id="@+id/TeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/last"
            android:inputType="textPersonName"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>

        <EditText
            android:id="@+id/TePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>

        <EditText
            android:id="@+id/TeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>

        <EditText
            android:id="@+id/TePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>
    </LinearLayout>

</RelativeLayout>